# uchimata-py

./: README.md  Untitled.ipynb  example.ipynb  minimal-example.ipynb  pyproject.toml  remote-data.ipynb
.github/workflows/: deploy.yml
data/stevens-2017/: README.md  notebook.ipynb  structures.md
data/tan-2018/: README.md  notebook.ipynb
data/tan-2018/GSE117876_RAW/selected/: GSM3271347_gm12878_01.impute.3dg.txt
docs/: README.md
examples/jupyter/: README.md  example.ipynb  minimal-example.ipynb  multiple-structures.ipynb  remote-data.ipynb  selections.ipynb
examples/marimo/: README.md  comparisons.py  compartments.py  genes-selector.py  imaging-based.py  selections.py  stevens2017.py  using-bioframe.py
sample_data/: all_subcompt_merged_example.csv  sample-genes.csv
src/chromospyce/: __init__.py
src/chromospyce/static/: widget.js
src/uchimata/: __init__.py
src/uchimata/static/: widget.js
tests/: basic.py  test_selections.py  test_viewconfig.py
