[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uchimata"
version = "0.2.0"
dependencies = [
    "anywidget>=0.9.13",
    "bioframe>=0.8.0",
    "duckdb>=1.3.2",
    "marimo>=0.8.22",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "numpy",
    "uchimata",
    "pyarrow",
    "watchfiles",
    "nbconvert",
    "pytest>=8.3.3",
]

[tool.uv.sources]
uchimata = { workspace = true }

[tool.marimo.runtime]
output_max_bytes = 15_000_000
